test/Fail/Issue4390erasure.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  _11 (f = (λ (@ω x₁) → f x₁)) x = f x : X (blocked on _11)

Issue4390erasure.agda:11.16-14.17: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue4390erasure.agda:11.16-17
  Issue4390erasure.agda:14.13-17
